--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,27 @@
+// Header
+.header {
+  display: block;
+  margin: 0 auto;
+  max-width: 800px;
+  width: 100%;
+  border-bottom: dashed 2px @navigation-border;
+
+  .header-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .header-text {
+      padding: 2rem 0 1rem;
+    }
+  }
+
+  // Welcome To Fun Bus! - Media Query
+  @media @mobile {
+    width: 90%;
+  }
+}
+
 .home {
 
   .content-section {
@@ -6,16 +30,30 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
     }
 
+    // Let's Go! - Media Query
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+      padding-right: 0;
+
+      .text-content {
+        width: 90%;
+      }
+    }
+
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      // Let's Go! - Media Query
+      @media @mobile {
+        width: 90%;
+      }
 
       img {
         border-radius: 10px;
@@ -30,6 +68,11 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+    }
+
+    // Adventure Awaits - Media Query
+    @media @mobile {
+      flex-direction: column-reverse;
     }
 
     .img-content {
@@ -57,5 +100,31 @@
       width: 30%;
       margin-bottom: 30px;
     }
+
+    // Sign Me Up! - Media Query
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+      border: solid 1px black;
+
+      .destination {
+        width: 90%;
+      }
+    }
   }
 }// home
+
+// Buttons
+.destination {
+  .btn {
+    .buttons();
+  }
+}
+
+
+// Base Media Query
+@media @tablet {
+  html {
+    font-size: 53%;
+  }
+}
