--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins in here
+
+.buttons(@fontSize: 1.5rem, @fontColor: @white, @bgColor: @button-bg) {
+  font-size: @fontSize;
+  color: @fontColor;
+  background-color: @bgColor;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  text-align: center;
+  width: 90%;
+}
