--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,11 +15,6 @@
       padding: 2rem 0 1rem;
     }
   }
-
-  // Welcome To Fun Bus! - Media Query
-  @media @mobile {
-    width: 90%;
-  }
 }
 
 .home {
@@ -57,6 +52,10 @@
 
       img {
         border-radius: 10px;
+
+        &:hover {
+          animation: anim 2s 1;
+        }
       }
     }
   }
@@ -87,6 +86,10 @@
 
     img {
       border-radius: 10px;
+
+      &:hover {
+        animation: anim 2s 1;
+      }
     }
   }
 
@@ -105,7 +108,6 @@
     @media @mobile {
       flex-direction: column;
       align-items: center;
-      border: solid 1px black;
 
       .destination {
         width: 90%;
@@ -126,5 +128,21 @@
 @media @tablet {
   html {
     font-size: 53%;
+
+    .header {
+      width: 98%;
+
+      @media @mobile {
+        width: 90%;
+      }
+    }
+
+    .home {
+      width: 98%;
+    }
   }
+}
+
+@keyframes anim {
+  .borderAnim;
 }
